{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 231,
  "lineage": "5a4cf9a0-ec59-2aa1-e687-2348101fc18b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0855967270b4c7447",
            "domain": "vpc",
            "id": "eipalloc-0855967270b4c7447",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-85-138-6.compute-1.amazonaws.com",
            "public_ip": "3.85.138.6",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Private_Elastic_IP"
            },
            "tags_all": {
              "Name": "Private_Elastic_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vipulec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006dcf34c09e50022",
            "arn": "arn:aws:ec2:us-east-1:925550470303:instance/i-09e0d1c1ea1a67f78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e0d1c1ea1a67f78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vishal",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6f702c8a799784e",
            "private_dns": "ip-192-168-0-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.38",
            "public_ip": "52.201.237.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b7f7fd112db096b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddea9879076f48f0",
            "tags": {
              "Name": "vipulec2"
            },
            "tags_all": {
              "Name": "vipulec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0584e0a889e5f33b4"
            ]
          },
          "dependencies": [
            "aws_security_group.vipul-SW",
            "aws_subnet.vipul-sub-public",
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vipul-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:internet-gateway/igw-082187d7858a37002",
            "id": "igw-082187d7858a37002",
            "owner_id": "925550470303",
            "tags": {
              "Name": "vipul-IGW"
            },
            "tags_all": {
              "Name": "vipul-IGW"
            },
            "vpc_id": "vpc-045401f5293a0d2b6"
          },
          "dependencies": [
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0855967270b4c7447",
            "connectivity_type": "public",
            "id": "nat-014c5e307825f6b34",
            "network_interface_id": "eni-0c033f5d1905e3906",
            "private_ip": "192.168.0.138",
            "public_ip": "3.85.138.6",
            "subnet_id": "subnet-0ddea9879076f48f0",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.vipul-IGW",
            "aws_subnet.vipul-sub-public",
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:route-table/rtb-0eb384cf3cc566a81",
            "id": "rtb-0eb384cf3cc566a81",
            "owner_id": "925550470303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-014c5e307825f6b34",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Route_Table"
            },
            "tags_all": {
              "Name": "Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-045401f5293a0d2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.vipul-IGW",
            "aws_nat_gateway.nat",
            "aws_subnet.vipul-sub-public",
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vipul-pub-RTb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:route-table/rtb-019fe97be72f623b1",
            "id": "rtb-019fe97be72f623b1",
            "owner_id": "925550470303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082187d7858a37002",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vipul-pub-RTb"
            },
            "tags_all": {
              "Name": "vipul-pub-RTb"
            },
            "timeouts": null,
            "vpc_id": "vpc-045401f5293a0d2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vipul-IGW",
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040a86bf1f86d7b70",
            "route_table_id": "rtb-019fe97be72f623b1",
            "subnet_id": "subnet-0ddea9879076f48f0"
          },
          "dependencies": [
            "aws_internet_gateway.vipul-IGW",
            "aws_route_table.vipul-pub-RTb",
            "aws_subnet.vipul-sub-public",
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cf2352ca4934d9c",
            "route_table_id": "rtb-0eb384cf3cc566a81",
            "subnet_id": "subnet-0d8b76a33b63a34aa"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.vipul-IGW",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_subnet.vipul-sub-public",
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vipul-SW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:security-group/sg-0584e0a889e5f33b4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0584e0a889e5f33b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vipul-SW",
            "name_prefix": "",
            "owner_id": "925550470303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vipul"
            },
            "tags_all": {
              "Name": "vipul"
            },
            "timeouts": null,
            "vpc_id": "vpc-045401f5293a0d2b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:subnet/subnet-0d8b76a33b63a34aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8b76a33b63a34aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925550470303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet"
            },
            "tags_all": {
              "Name": "Private_subnet"
            },
            "vpc_id": "vpc-045401f5293a0d2b6"
          },
          "dependencies": [
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vipul-sub-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:subnet/subnet-0ddea9879076f48f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddea9879076f48f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925550470303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vipul-sub-public"
            },
            "tags_all": {
              "Name": "vipul-sub-public"
            },
            "vpc_id": "vpc-045401f5293a0d2b6"
          },
          "dependencies": [
            "aws_vpc.vipul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vipul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925550470303:vpc/vpc-045401f5293a0d2b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0401315364f9f8748",
            "default_route_table_id": "rtb-096bb5fb090175216",
            "default_security_group_id": "sg-0c5eeacd251a5d535",
            "dhcp_options_id": "dopt-0c297bd28a147fd82",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045401f5293a0d2b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096bb5fb090175216",
            "owner_id": "925550470303",
            "tags": {
              "Name": "vipul"
            },
            "tags_all": {
              "Name": "vipul"
            }
          }
        }
      ]
    }
  ]
}